# code

./: .gitignore  .prettierignore  AGENTS.md  AGENTS.override.md  CHANGELOG.md  FORK.md  PLAN.md  README.md  UI_UX_REFERENCE.md  build-fast.sh  defs.bzl  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-release.sh
.github/: actionlint.yaml  blob-size-allowlist.txt  dependabot.yaml  github-repo-workflow.json  github.json  merge-policy.json  upstream-cursors.json
.github/ISSUE_TEMPLATE/: 1-codex-app.yml  3-cli.yml  4-bug-report.yml  5-feature-request.yml  6-docs-issue.yml
.github/scripts/: install-code-release.sh
.github/workflows/: README.md  binary-release.yml  blob-size-policy.yml  issue-code.yml  issue-comment.yml  issue-triage.yml  native-ios-testflight.yml  native-macos-artifact.yml  native-macos-testflight.yml  preview-build.yml  release-fork.yml  release.yml  rust-ci.yml  rust-release-argument-comment-lint.yml  rusty-v8-release.yml  upstream-merge.yml  upstream-sync.yml  v8-canary.yml
code-rs/: .cargo-watch.toml  .gitignore  .ignore  Cargo.toml  README.md  config.md
code-rs/app-server/: Cargo.toml
code-rs/app-server-test-client/: Cargo.toml  README.md
code-rs/app-server-test-client/src/: lib.rs  main.rs
code-rs/app-server/src/: broker.rs  code_message_processor.rs  config_rpc.rs  conversation_streams.rs  fuzzy_file_search.rs  jsonrpc_compat.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  remote_skills.rs  transport.rs  web_server.rs  websocket_transport.rs
code-rs/app-server/src/request_processors/: config_processor.rs
code-rs/app-server/tests/: all.rs  binary_smoke.rs  websocket_parity.rs
code-rs/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  config.rs  lib.rs  mcp_process.rs  mock_model_server.rs  models_cache.rs  responses.rs  rollout.rs
code-rs/app-server/tests/suite/: archive_thread.rs  auth.rs  codex_message_processor_flow.rs  config.rs  create_thread.rs  fork_thread.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  output_schema.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
code-rs/app-server/tests/suite/v2/: account.rs  analytics.rs  app_list.rs  code_bridge_boundary.rs  collaboration_mode_list.rs  compaction.rs  compat_endpoints.rs  config_rpc.rs  connection_handling_websocket.rs  dynamic_tools.rs  experimental_api.rs  experimental_feature_list.rs  initialize.rs  mod.rs  model_list.rs  output_schema.rs  plan_item.rs  rate_limits.rs  request_user_input.rs  review.rs  thread_archive.rs  thread_fork.rs  thread_list.rs  thread_loaded_list.rs  thread_read.rs  thread_resume.rs  thread_rollback.rs  thread_start.rs  thread_unarchive.rs  turn_interrupt.rs  turn_start.rs
code-rs/chatgpt/: Cargo.toml
code-rs/chatgpt/src/: chatgpt_client.rs  chatgpt_token.rs  connectors.rs
code-rs/cli/: Cargo.toml
code-rs/code-auto-drive-core/: Cargo.toml
code-rs/code-experimental-api-macros/: Cargo.toml
code-rs/core/: Cargo.toml  prompt_coder.md
code-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs
code-rs/exec/: Cargo.toml
code-rs/gateway/: Cargo.toml
code-rs/gateway/src/: assets.rs  auth.rs  history.rs  lib.rs  main.rs
code-rs/gateway/src/assets/: app-core.js  app.css  index.html
code-rs/protocol/: Cargo.toml
code-rs/realtime-webrtc/: Cargo.toml  README.md
code-rs/rmcp-client/: Cargo.toml
code-rs/tui/: Cargo.toml
code-rs/webui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
codex-cli/: package-lock.json  package.json
codex-cli/scripts/: run_in_container.sh  windows-cleanup.ps1
codex-rs/hooks/: Cargo.toml
docs/: advanced.md  agents.md  auto-drive-parity.md  auto-drive.md  auto-review-proof-metrics-parity.md  code-bridge-browser-parity.md  codex-base-feature-inventory.md  codex-fork-parity-ledger.md  config.md  every-code-poller.md  example-config.md  exec.md  execpolicy.md  exit-confirmation-prompt-design.md  faq.md  getting-started.md  index.md  install.md  integration-zed.md  local-overlay.md  native-app-parity-matrix.md  native-app-parity-plan.md  native-app-store-metadata.md  native-screenshot-benchmarking.md  prompts.md  sandbox.md  settings.md  shared-session-remote-access.md  shared-session-web-ui-matrix.md  skills.md  slash-commands.md  token-diagnostics-parity.md  tui-alternate-screen.md  tui-chat-composer.md  tui-stream-chunking-review.md  tui-stream-chunking-tuning.md  tui-stream-chunking-validation.md  update-manifest.md  upstream-import-policy.md
docs/reference/: codex-app-ui-2026-02-12.md
docs/release-notes/: RELEASE_NOTES.md
every-code-webui/: AGENTS.md  README.md  package.json  pnpm-lock.yaml
every-code-webui/src/: service-worker.ts
every-code-webui/static/: manifest.webmanifest
experiments/shared-session-web-ui/: README.md  app.css  app.js  index.html
native/CodeNative/: Package.swift  README.md
native/CodeNativeMac/: README.md  project.yml
native/CodeNativeiOS/: README.md  project.yml
scripts/: check-codex-path-deps.sh  check-release-notes-version.sh  cli-compat-smoke.sh  dev-native.sh  every-code-poller.sh  install-ecc-shims.sh  install.sh  mock_responses_websocket_server.py  native-preflight-macos.sh  release-ios-tag.sh  release-macos-tag.sh  release-native-artifacts.sh  run-ecc-local.sh  smoke-shared-session-loopback.mjs  wait-for-gh-run.sh
scripts/install/: install.sh
scripts/local/: check-code-rebuild-preflight.sh  cleanup-space.sh  com.cbusillo.every-code-worker.plist.example  every-code-poller.sh  every-code-worker.sh  fork-health.sh  generate-overlay-release-notes.sh  overlay-branches.txt  overlay-picks.txt  rebuild-path-code.sh  release-notes.sh  release-tag-utils.sh  remove-homebrew-code-link.sh  update-from-upstream.sh  update-overlay-from-upstream.sh  upstream-cursors.sh  upstream-picks.txt
scripts/release/: determine-release-intent.sh  generate-update-manifest.sh
scripts/upstream-merge/: verify.sh
scripts/ux/: benchmark-native-ui.sh  verify-native-benchmark-baseline.sh  verify-parity-triplets.sh
tools/code-exec-harness/: AGENTS.md  README.md  (+2 more)
(+617 files in other folders)
