[package]
name = "code-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
clap = { workspace = true, features = ["derive"] }
code-common = { workspace = true, features = ["cli"] }
code-core = { workspace = true }
code-app-server-protocol = { workspace = true }
code-protocol = { workspace = true }
code-utils-json-to-toml = { workspace = true }
libc = { workspace = true }
futures = { workspace = true }
fs2 = "0.4"
mcp-types = { workspace = true }
once_cell = { workspace = true }
notify = "6.1.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
