[package]
name = "app_test_support"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
code-common = { workspace = true }
code-app-server-protocol = { workspace = true }
code-core = { workspace = true }
code-protocol = { workspace = true }
code-utils-cargo-bin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
] }
uuid = { workspace = true }
wiremock = { workspace = true }
core_test_support = { workspace = true }
shlex = { workspace = true }
